Fix padding issue on mobile device

--- a/src/pages/Landing/landing.css
+++ b/src/pages/Landing/landing.css
@@ -52,6 +52,7 @@
     .landing {
         display: flex;
         justify-content: center;
+        padding: 2rem;
     }
 
     .landing__content {
